--- a/src/styles/TodoListItem.module.css
+++ b/src/styles/TodoListItem.module.css
@@ -1,16 +1,12 @@
 .ListItem {
     display: flex;
-    flex-direction: row; 
-    justify-content:flex-end;
+    list-style-type: circle;
     padding-bottom: 8px;
-    padding-right: 50px;
     font-size: 17px;
     color: black;
-    align-items: center;
+    justify-content: space-between;
 }
 
-/* .RemoveButton{
-    
-} */
+
 
 
