--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -1,15 +1,12 @@
-.FormControl {
-    display: flex; 
-    padding: 0.25rem;
-    padding-left: 1rem; 
-}
-
 .TodoForm {
     display: flex;
     flex-direction: column;
     align-items: center; 
-    font-size: 20px; 
+    font-size: 30px; 
+    justify-content: center;
 }
+
+
 
 
 
