--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -7,20 +7,22 @@
     opacity: .8;
 }
 
-.Title {
+.IntroTitle {
     font-size: 45px;
     text-align: center;
 }
 
 .TodoListContainer {
-    background-image: url('https://i.pinimg.com/564x/cb/87/8c/cb878c7b6c82c0308c4f6b2c5c02d861.jpg');
-    width: 43%;
+    background-image: url('https://wallpapercave.com/wp/wp3315676.jpg');
+    width: 30%;
+    height: 480px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset -6px -4px 2px rgba(255, 255, 255, 0.03);
+    box-shadow: inset -6px -4px 2px rgba(255, 255, 255, 0.03); 
     border-radius: 15px;
+    border: 1.5px solid #c8d5b9;
 }
 
 
