--- a/src/shared/globalStyles.css
+++ b/src/shared/globalStyles.css
@@ -25,3 +25,10 @@ button:hover{
 
 /* change background color 
 add fonts to glbal */
+
+@media only screen and (max-width: 992px) {
+    body{
+    overflow-x: hidden;
+    }
+
+}
