--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,27 +1,37 @@
 .intro {
     background-image: url('https://i.pinimg.com/564x/ea/d6/9a/ead69acce05bc8ab9bf92879264871ae.jpg');
+    margin-left: auto;
+    margin-right: auto;
     width: 28%;
-    margin: 5px;
     border-right: 1px dotted #dad7cd;
     border-left: 1px dotted #dad7cd;
     opacity: .8;
+
 }
 
 .Title{
-    font-size: 45px;
+    font-size: 50px;
     text-align: center;
 }
 
 .IntroContainer{
     background-image: url('https://i.pinimg.com/564x/23/97/0f/23970f0adb578b330fd3d8c94b1cae4a.jpg');
-    width: 40%;
-    margin: 5px;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
     border-right: 1px dotted #dad7cd;
     border-left: 1px dotted #dad7cd;
     opacity: .8;
+    padding: 10px 24px;
 }
 .IntroContainer p {
     font-size: 20px;
+}
+
+
+button a {
+    color: black;
+    text-decoration: none;
 }
 
 
@@ -30,14 +40,22 @@
         display: flex;
         flex-wrap:wrap;
         width: 50vw;
-        align-items: center;
         justify-content: center;
+        margin-left:auto;
+        margin-right: auto;
+        margin-bottom: 10px;
     }
     .Title{
     font-size: 26px;
+    text-align: center;
     }
     .IntroContainer{
         width: 60%;
+        margin-left: auto;
+        margin-right:auto;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
     .IntroContainer p {
         font-size: 22px;
