--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,8 +12,7 @@
 .Navbar a{
     text-decoration: none;
     color: black;
-    font-weight: 700;
-    
+    font-weight: 700;    
 }
 
 .Navbar li{
@@ -22,26 +21,54 @@
     padding: 14px 16px;
     list-style-type: none;
     text-decoration: none;
-    font-size: 18px;
-    
+    font-size: 18px;  
 }
 
 .Navbar li:hover{
     background-color: #c8d5b9;
 }
 
-.Navbar li.active{
+/* .Navbar li.active{
     background-color: #04AA6D;
     color: white;
-}
+} */
 
-@media only screen and (max-width: 600px) {
-    .Navbar {
-      position: unset;
-      align-items: center;
+@media only screen and (max-width: 992px) {
+    .navContainer {
+        display: flex;
+        width: 85vw;
+        justify-content: left;
+        padding-bottom: 10px;
+        margin: 0;
+        
     }
-    .Navbar a {
-      width: 70px;
-      padding-left: unset;
+    .Navbar {
+        text-align: center;     
+    }
+    .Navbar li {
+        text-decoration: underline;
+        font-size: 16px;
+        padding: 5px;
     }
   }
+
+
+  @media only screen and (max-width: 768px) {
+    .navContainer {
+        display: flex;
+        width: 100vw;
+        justify-content: left;
+        padding-bottom: 10px;
+        margin: 0;
+        
+    }
+    .Navbar {
+        text-align: center;     
+    }
+    .Navbar li {
+        text-decoration: underline;
+        font-size: 28px;
+        padding: 8px;
+    }
+  }
+
