--- a/src/styles/NewTodoList.module.css
+++ b/src/styles/NewTodoList.module.css
@@ -1,14 +1,15 @@
 .intro{
     background-image: url('https://i.pinimg.com/564x/ea/d6/9a/ead69acce05bc8ab9bf92879264871ae.jpg');
     width: 28%;
-    margin: 5px;
+    margin-left:auto;
+    margin-right: auto;
     border-right: 1px dotted #dad7cd;
     border-left: 1px dotted #dad7cd;
     opacity: .8; 
 }
 
 .Title{
-    font-size: 45px;
+    font-size: 50px;
     text-align: center;
 }
 
@@ -19,6 +20,8 @@
         width: 50vw;
         align-items: center;
         justify-content: center;
+        margin-left:auto;
+        margin-right: auto;
     }
     .Title{
     font-size: 26px;
