--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -2,17 +2,28 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    font-size: 30px; 
+    font-size: 45px; 
+    min-height: 140px;
     justify-content: center;
 }
 
 @media only screen and (max-width: 992px) {
     .TodoForm{
-        font-size: 22px;
+        font-size: 35px;
+        min-height: 140px;
         display: flex;
-        width: 50vw;
-        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        word-wrap: break-word;
+        margin-left: auto;
+        margin-right: auto;
     }
+    .ButtonContainer{
+        display: flex;
+        justify-content: center;
+        padding-left: 5px;
+    }
+ 
 }
 
 
