--- a/src/styles/TodoListItem.module.css
+++ b/src/styles/TodoListItem.module.css
@@ -10,8 +10,9 @@
     .ListItem{
         display: flex;
         justify-content: space-between;
-        font-size: 15px;
-        
+        font-size: 20px;
+        flex-direction: row; 
+
     }
 }
 
