--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -16,7 +16,7 @@
 
 .TodoListContainer {
     background-image: url('https://wallpapercave.com/wp/wp3315676.jpg');
-    width: 50%;
+    width: 45%;
     margin-left: auto;
     margin-right: auto;
     height: 400px;
@@ -28,6 +28,24 @@
     border-radius: 15px;
     border: 1.5px solid #c8d5b9;
     
+}
+/* .allContainer {
+    display: flex;
+
+} */
+
+.keyContainer{
+    display: flex;
+    width: 30%;
+    height: 50%;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 15px;
+}
+.buttonContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width: 992px) {
@@ -47,12 +65,27 @@
 
     .TodoListContainer {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
         margin-right: auto;
         margin-left: auto;
-        width: 70vw;
+        width: auto;
         height: auto;  
+    }
+    .keyContainer{
+       display: flex;
+       flex-direction: column;
+       margin: 0;
+       width: 60%;
+       background:none;
+    }
+    .buttonContainer {
+        display: flex;
+        height: 30px;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 15px;
     }
 }
 
