--- a/src/styles/TodoListUL.css
+++ b/src/styles/TodoListUL.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    width: 350px;
+    width: 360px;
     overflow: scroll;
-    height: auto;
+    height: 100vh;
 }
+
 ::-webkit-scrollbar {
     width: 10px;
   }
@@ -23,6 +24,10 @@
     .fullTodo {
         width: auto;
         overflow: scroll;
-    
+        height: 35vh;
     }
+    /* .fullTodoContainer {
+      height: 80px;
+    } */
+
 }
