--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,14 +6,11 @@
     border-right: 1px dotted #dad7cd;
     border-left: 1px dotted #dad7cd;
     opacity: .8;
-
 }
-
 .Title{
     font-size: 50px;
     text-align: center;
 }
-
 .IntroContainer{
     background-image: url('https://i.pinimg.com/564x/23/97/0f/23970f0adb578b330fd3d8c94b1cae4a.jpg');
     width: 25%;
@@ -58,7 +55,8 @@ button a {
     text-align: center;
     }
     .IntroContainer{
-        width: 60%;
+        width: 60vw;
+        height: 39vh;
         margin-left: auto;
         margin-right:auto;
         display: flex;
@@ -66,7 +64,7 @@ button a {
         flex-wrap: wrap;
     }
     .IntroContainer p {
-        font-size: 22px;
+        font-size: 14px;
 
     }
 }
