--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,10 +5,15 @@
     bottom: 0;
     width: 100vw;
   }
-  
-  .ending-credits {
+.ending-credits {
     text-align: center;
     width: 100%;
     font-size: 12px;
     
   }
+@media only screen and (max-width: 992px) {
+    .ending-credits {
+        font-size: 9px;
+        
+      }
+}
