--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -15,7 +15,8 @@
 }
 
 .TodoListContainer {
-    background-image: url('https://wallpapercave.com/wp/wp3315676.jpg');
+    /* background-image: url(''); */
+    /* TODO: update todo list background */
     width: 45%;
     margin-left: auto;
     margin-right: auto;
