--- a/src/styles/TodoListUL.css
+++ b/src/styles/TodoListUL.css
@@ -17,7 +17,7 @@
     background: #c8d5b9;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #647332;
+    background: #a4c3b2;
   }
 
 @media only screen and (max-width: 992px) {
