--- a/src/styles/Note.css
+++ b/src/styles/Note.css
@@ -12,27 +12,27 @@
     font-size: 50px;
     text-align: center;
 }
-
 .NoteContainer {
     padding-bottom: 10px;
 }
 .note {
-    background-image: url('https://i.pinimg.com/564x/cb/87/8c/cb878c7b6c82c0308c4f6b2c5c02d861.jpg') ;
+    background-image: url('https://img.freepik.com/free-photo/crumpled-white-paperboard_95678-119.jpg?w=1060&t=st=1682950549~exp=1682951149~hmac=f57f92a5e33930032da385fbc026693efe6ee16bb4f64e0ad8304dc5b1b40fd2') ;
+    opacity: .7;
     box-shadow: inset -6px -4px 2px rgba(255, 255, 255, 0.03);
     border-radius: 15px;
     border: 1.5px solid #c8d5b9;
     color: black;
     padding: 15px;
-    min-height: 140px;
-    width: 40%;
+    min-height: 100px;
+    max-width: 20%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
     word-wrap: break-word;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
 }
-
 .note__footer {
     display: flex;
     align-items: center;
@@ -45,7 +45,7 @@
     border: none;
     color: black;
     resize: none;
-    font-size: 18px;
+    font-size: 20px;
 }
 .note textarea:focus {
     outline: none;
@@ -53,10 +53,21 @@
 .note textarea::placeholder {
     color:black;
 } 
-
-.char__progress {
-     background-color: #fff!important;
+.textbox{
+    animation: blink 1.5s linear infinite;
+    animation-iteration-count: 3;
 }
+@keyframes blink {
+    0%{opacity: 0;}
+    50%{opacity: .5;}
+    100%{opacity: 1;}
+}
+
+
+
+/* .char__progress {
+     background-color: #fff!important;
+} */
 
 .CreateContainer{
     padding-bottom: 10px;
@@ -79,10 +90,25 @@
     }
     .note {
         grid-template-columns: repeat(2, minmax(300px, 1fr));
-        width: 60%;
-        
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        max-width: 50%;
+        flex-wrap: wrap;
     }
     .CreateContainer{
         padding: 5px;
     }
+    .note__footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 5px;
+        flex-wrap: wrap;
+    }
 }
+/* @media screen and (max-width: 500px) {
+    .notes {
+        grid-template-columns: repeat(1, minmax(300px, 1fr));
+    }
+} */
